[package]
name = "rover"
version = "0.1.0"
edition = "2021"
description = "Rover for Cosmos chains"
repository = "https://github.com/rnbguy/rover"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.2"
bech32 = "0.9.1"
bip32 = { version = "0.5.1", features = ["secp256k1", "bip39"] }
chrono = "0.4.26"
clap = { version = "4.3.23", features = ["derive"] }
cosmos-sdk-proto = { git = "https://github.com/rnbguy/cosmos-rust", branch = "rano/json", features = ["cosmwasm"] }
der-parser = "8.2.0"
directories = "5.0.1"
futures = "0.3.28"
gql_client = "1.0.7"
keyring = "2.0.5"
lazy_static = "1.4.0"
ledger-transport = "0.10.0"
ledger-transport-hid = "0.10.0"
levenshtein = "1.0.5"
obfstr = { version = "0.4.3", optional = true }
prost = "0.11.9"
rayon = "1.7.0"
regex = "1.9.3"
requestty = "0.5.0"
ripemd = "0.1.3"
rpassword = "7.2.0"
secp256k1 = "0.28.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
sha2 = "0.10.7"
sha3 = "0.10.8"
tendermint = "0.33.0"
tendermint-rpc = { version = "0.33.0", features = ["http-client"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
tracing = "0.1.37"
ureq = { version = "2.7.1", features = ["json"] }
url = "2.4.0"
