[package]
name = "rover"
version = "0.1.0"
edition = "2021"
description = "Rover for Cosmos chains"
repository = "https://github.com/rnbguy/rover"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bech32 = "0.11"
bip32 = { version = "0.5", features = ["secp256k1", "bip39"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
cosmos-sdk-proto = { git = "https://github.com/rnbguy/cosmos-rust", branch = "rano/json", features = ["cosmwasm"] }
der-parser = "9.0"
directories = "5.0"
futures = "0.3"
gql_client = "1.0"
keyring = "2.3"
lazy_static = "1.4"
ledger-transport = "0.10"
ledger-transport-hid = "0.10"
levenshtein = "1.0"
obfstr = { version = "0.4", optional = true }
prost = "0.12"
rayon = "1.9"
regex = "1.10"
requestty = "0.5"
ripemd = "0.1"
rpassword = "7.3"
secp256k1 = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
sha3 = "0.10"
tendermint = "0.35"
tendermint-rpc = { version = "0.34", features = ["http-client"] }
tokio = { version = "1.36", features = ["rt-multi-thread"] }
tracing = "0.1"
ureq = { version = "2.9", features = ["json"] }
url = "2.5"
